[SPv175] Apply opacity when painting scrollbar thumb on mac

Previously the opacity was applied with CompositingRecorder which becomes
no-op in SPv175. Now apply the opacity with GraphicsContext::BeginLayer().

Bug: 834296
Change-Id: Ie4968595a7df02592b81fb0ae2b14ee0097f4313
Reviewed-on: https://chromium-review.googlesource.com/1036223
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555055}
Former-commit-id: 3518c7115bed5c02568c01020e25a4fc9cb9f07e